LFLT-494 Add 3rd party login possibility to LAGS with Google account  - Implemented support for Google based external authentication  - Added relevant unit and acceptance test cases